Issue #10272: The ssl module now raises socket.timeout instead of a generic SSLError on socket timeouts.